[gd_scene load_steps=7 format=3 uid="uid://vdrn2ll11m8x"]

[ext_resource type="Script" uid="uid://cnjp7qbrpg74t" path="res://scenes/minigames/cardswipe_minigame/cardswipe_minigame.gd" id="1_4ytg0"]
[ext_resource type="Texture2D" uid="uid://c8kb2v76eoosy" path="res://imports/assets/doorOpenAnim1.png" id="2_bw822"]
[ext_resource type="Texture2D" uid="uid://cw1fjmc4rnra1" path="res://imports/assets/cardReader/bottomReader.png" id="2_fifm3"]
[ext_resource type="Script" uid="uid://bav2bupujmxb1" path="res://scenes/minigames/cardswipe_minigame/swipeCard.gd" id="3_k1oj5"]
[ext_resource type="Texture2D" uid="uid://ckrl0yrray1vx" path="res://imports/assets/cardReader/topReader.png" id="3_sspbe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bw822"]
size = Vector2(29.25, 47.5)

[node name="CardswipeMinigame" type="Node"]
script = ExtResource("1_4ytg0")

[node name="BottomReader" type="Sprite2D" parent="."]
position = Vector2(593.633, 251.618)
scale = Vector2(3.50989, 2.15028)
texture = ExtResource("2_fifm3")

[node name="start_pos" type="Node2D" parent="."]
position = Vector2(134, 233)

[node name="card" type="Sprite2D" parent="."]
position = Vector2(189, 449)
rotation = -1.5708
scale = Vector2(4, 4)
texture = ExtResource("2_bw822")
script = ExtResource("3_k1oj5")

[node name="touchHelper" type="Button" parent="card"]
offset_left = -15.0
offset_top = -24.0
offset_right = 15.0
offset_bottom = 24.0

[node name="Area2D" type="Area2D" parent="card"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="card/Area2D"]
position = Vector2(-0.125, 0.25)
shape = SubResource("RectangleShape2D_bw822")

[node name="cardswipeTimingMax" type="Timer" parent="card"]
wait_time = 1.5
one_shot = true

[node name="cardswipeTimingMin" type="Timer" parent="card"]
wait_time = 0.8
one_shot = true

[node name="reenableButtonDelay" type="Timer" parent="card"]
wait_time = 0.242
one_shot = true

[node name="start_swipe" type="Node2D" parent="."]
position = Vector2(374, 269)

[node name="end_swipe" type="Node2D" parent="."]
position = Vector2(812, 271)

[node name="TopReader" type="Sprite2D" parent="."]
position = Vector2(593.633, 251.618)
scale = Vector2(3.50989, 2.15028)
texture = ExtResource("3_sspbe")

[node name="Label" type="Label" parent="TopReader"]
offset_left = -44.6262
offset_top = -27.2607
offset_right = 18.3738
offset_bottom = -4.26067
text = "swipe ->"

[node name="timingHelp" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 471.0
offset_top = 298.0
offset_right = 569.0
offset_bottom = 338.0
theme_override_colors/font_color = Color(0.929412, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.574819, 0.000216697, 0.000118498, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 29

[node name="resetTimingHelpLabel" type="Timer" parent="timingHelp"]
unique_name_in_owner = true
one_shot = true

[connection signal="button_down" from="card/touchHelper" to="card" method="_on_touch_helper_button_down"]
[connection signal="button_up" from="card/touchHelper" to="card" method="_on_touch_helper_button_up"]
[connection signal="timeout" from="card/cardswipeTimingMax" to="card" method="_on_cardswipe_timing_max_timeout"]
[connection signal="timeout" from="card/cardswipeTimingMin" to="card" method="_on_cardswipe_timing_min_timeout"]
[connection signal="timeout" from="card/reenableButtonDelay" to="card" method="_on_reenable_button_delay_timeout"]
[connection signal="timeout" from="timingHelp/resetTimingHelpLabel" to="card" method="_on_reset_timing_help_label_timeout"]
